# embedded_rust

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
src/: main.rs
