[package]
name = "project_test"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m     = { version = "0.7.7", features = ["inline-asm"] }
cortex-m-rt  = "0.7"
panic-halt   = "0.2"

stm32l4xx-hal = { version = "0.7", features = ["stm32l475", "rt"] }

[profile.dev]
incremental   = false
codegen-units = 1

[profile.release]
codegen-units = 1
debug         = true
lto           = true